--- a/configs/x86-64-18.06.config
+++ b/configs/x86-64-18.06.config
@@ -23,6 +23,7 @@ CONFIG_TARGET_ROOTFS_TARGZ=y
 # CONFIG_PACKAGE_luci-app-alist is not set
 # CONFIG_PACKAGE_luci-app-adguardhom is not set
 # CONFIG_PACKAGE_luci-app-argon-config is not set
+# CONFIG_PACKAGE_luci-app-ksmbd is not set
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-autoreboot=y
 # CONFIG_PACKAGE_luci-app-cifs-mount is not set
